# falcon_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: display.launch  display.rviz  gazebo.launch
meshes/: chassis.blend  chassis.blend1  chassis_centered.blend  chassis_centered.blend1  wheel.blend  wheel.blend1
meshes/visual/: chassis.dae  chassis.stl  chassis_centered.dae  ebox.stl  wheel.dae  wheel.stl
urdf/: falcon.gazebo  falcon.urdf.xacro
